Add file styles/12-style.css

--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -40,7 +40,7 @@ html {
 
     /* Define custom section-title properties */
     --section-title-margin: 0;
-    --section-title-color: color-black;
+    --section-title-color: var(--color-black);
 }
 
 body {
